--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.14.0",
     "json": "^9.0.4",
     "mongodb": "^2.2.12",
+    "node-mailer": "^0.1.1",
     "request": "^2.79.0",
     "urlencode": "^1.1.0",
     "xml2js": "^0.4.17"
