--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "forever": "^0.15.3",
     "json": "^9.0.4",
     "mongodb": "^2.2.12",
+    "node-mailer": "^0.1.1",
     "request": "^2.79.0",
     "urlencode": "^1.1.0",
     "xml2js": "^0.4.17"
